[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrf-fire-ddscat-lut"
version = "0.1.0"
description = "WRF-Fire + DDSCAT LUT postprocess skeleton."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "xarray>=2023.8",
  "netCDF4>=1.6",
]

[project.scripts]
wrf-fire-ddscat-lut = "wrf_fire_ddscat_lut.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

